results/SVCOMP/conversational/log-StringBuilderChars03-2024_03_16_04_31_10.txt
public class StringBuilderChars03 {
    //@ requires arg != null && arg.length() >= 5;
    //@ ensures \result == (arg.charAt(0) == arg.charAt(4));
    public static boolean f(String arg) {
        StringBuilder buffer = new StringBuilder(arg);
        return buffer.charAt(0) == buffer.charAt(4);
    }
}
/home/max/Documents/JMLGPT/tmp/StringBuilderChars03.java:6: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/StringBuilderChars03.java:3:) in method f
        return buffer.charAt(0) == buffer.charAt(4);
        ^
/home/max/Documents/JMLGPT/tmp/StringBuilderChars03.java:3: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/StringBuilderChars03.java:6:
    //@ ensures \result == (arg.charAt(0) == arg.charAt(4));
        ^
2 verification failures

public class StringBuilderChars03 {
    //@ requires arg != null && arg.length() >= 5;
    /*@ ensures \result == (arg.charAt(0) == arg.charAt(4)); */
    public static boolean f(String arg) {
        StringBuilder buffer = new StringBuilder(arg);
        return buffer.charAt(0) == buffer.charAt(4);
    }
}
/home/max/Documents/JMLGPT/tmp/StringBuilderChars03.java:6: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/StringBuilderChars03.java:3:) in method f
        return buffer.charAt(0) == buffer.charAt(4);
        ^
/home/max/Documents/JMLGPT/tmp/StringBuilderChars03.java:3: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/StringBuilderChars03.java:6:
    /*@ ensures \result == (arg.charAt(0) == arg.charAt(4)); */
        ^
2 verification failures

public class StringBuilderChars03 {
    //@ requires arg != null && arg.length() >= 5;
    //@ ensures \result == (buffer.charAt(0) == buffer.charAt(4));
    public static boolean f(String arg) {
        StringBuilder buffer = new StringBuilder(arg);
        return buffer.charAt(0) == buffer.charAt(4);
    }
}
/home/max/Documents/JMLGPT/tmp/StringBuilderChars03.java:3: error: cannot find symbol
    //@ ensures \result == (buffer.charAt(0) == buffer.charAt(4));
                            ^
  symbol:   variable buffer
  location: class StringBuilderChars03
/home/max/Documents/JMLGPT/tmp/StringBuilderChars03.java:3: error: cannot find symbol
    //@ ensures \result == (buffer.charAt(0) == buffer.charAt(4));
                                                ^
  symbol:   variable buffer
  location: class StringBuilderChars03
2 errors

public class StringBuilderChars03 {
    //@ requires arg != null && arg.length() >= 5;
    //@ ensures \result == (new StringBuilder(arg).charAt(0) == new StringBuilder(arg).charAt(4));
    public static boolean f(String arg) {
        StringBuilder buffer = new StringBuilder(arg);
        return buffer.charAt(0) == buffer.charAt(4);
    }
}
/home/max/Documents/JMLGPT/tmp/StringBuilderChars03.java:3: error: Object allocation is not permitted in specification expressions
    //@ ensures \result == (new StringBuilder(arg).charAt(0) == new StringBuilder(arg).charAt(4));
                            ^
/home/max/Documents/JMLGPT/tmp/StringBuilderChars03.java:3: error: Object allocation is not permitted in specification expressions
    //@ ensures \result == (new StringBuilder(arg).charAt(0) == new StringBuilder(arg).charAt(4));
                                                                ^
2 errors

public class StringBuilderChars03 {
    //@ requires arg != null && arg.length() >= 5;
    //@ ensures \result == (arg.charAt(0) == arg.charAt(4));
    public static boolean f(String arg) {
        StringBuilder buffer = new StringBuilder(arg);
        return buffer.charAt(0) == buffer.charAt(4);
    }
}
/home/max/Documents/JMLGPT/tmp/StringBuilderChars03.java:6: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/StringBuilderChars03.java:3:) in method f
        return buffer.charAt(0) == buffer.charAt(4);
        ^
/home/max/Documents/JMLGPT/tmp/StringBuilderChars03.java:3: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/StringBuilderChars03.java:6:
    //@ ensures \result == (arg.charAt(0) == arg.charAt(4));
        ^
2 verification failures

public class StringBuilderChars03 {
    //@ requires arg != null && arg.length() >= 5;
    //@ ensures \result == (arg.charAt(0) == arg.charAt(4));
    public static boolean f(String arg) {
        StringBuilder buffer = new StringBuilder(arg);
        return buffer.charAt(0) == buffer.charAt(4);
    }
}
/home/max/Documents/JMLGPT/tmp/StringBuilderChars03.java:6: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/StringBuilderChars03.java:3:) in method f
        return buffer.charAt(0) == buffer.charAt(4);
        ^
/home/max/Documents/JMLGPT/tmp/StringBuilderChars03.java:3: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/StringBuilderChars03.java:6:
    //@ ensures \result == (arg.charAt(0) == arg.charAt(4));
        ^
2 verification failures

public class StringBuilderChars03 {
    //@ requires arg != null && arg.length() >= 5;
    //@ ensures \result == (arg.charAt(0) == arg.charAt(4));
    public static boolean f(String arg) {
        StringBuilder buffer = new StringBuilder(arg);
        return buffer.charAt(0) == buffer.charAt(4);
    }
}
/home/max/Documents/JMLGPT/tmp/StringBuilderChars03.java:6: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/StringBuilderChars03.java:3:) in method f
        return buffer.charAt(0) == buffer.charAt(4);
        ^
/home/max/Documents/JMLGPT/tmp/StringBuilderChars03.java:3: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/StringBuilderChars03.java:6:
    //@ ensures \result == (arg.charAt(0) == arg.charAt(4));
        ^
2 verification failures

public class StringBuilderChars03 {
    //@ requires arg != null && arg.length() >= 5;
    //@ ensures \result == (arg.charAt(0) == arg.charAt(4));
    public static boolean f(String arg) {
        StringBuilder buffer = new StringBuilder(arg);
        return buffer.charAt(0) == buffer.charAt(4);
    }
}
/home/max/Documents/JMLGPT/tmp/StringBuilderChars03.java:6: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/StringBuilderChars03.java:3:) in method f
        return buffer.charAt(0) == buffer.charAt(4);
        ^
/home/max/Documents/JMLGPT/tmp/StringBuilderChars03.java:3: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/StringBuilderChars03.java:6:
    //@ ensures \result == (arg.charAt(0) == arg.charAt(4));
        ^
2 verification failures

public class StringBuilderChars03 {
    //@ requires arg != null && arg.length() >= 5;
    //@ ensures \result == (arg.charAt(0) == arg.charAt(4));
    public static boolean f(String arg) {
        StringBuilder buffer = new StringBuilder(arg);
        return buffer.charAt(0) == buffer.charAt(4);
    }
}
/home/max/Documents/JMLGPT/tmp/StringBuilderChars03.java:6: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/StringBuilderChars03.java:3:) in method f
        return buffer.charAt(0) == buffer.charAt(4);
        ^
/home/max/Documents/JMLGPT/tmp/StringBuilderChars03.java:3: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/StringBuilderChars03.java:6:
    //@ ensures \result == (arg.charAt(0) == arg.charAt(4));
        ^
2 verification failures

public class StringBuilderChars03 {
    //@ requires arg != null && arg.length() >= 5;
    //@ ensures \result == (arg.charAt(0) == arg.charAt(4));
    public static boolean f(String arg) {
        StringBuilder buffer = new StringBuilder(arg);
        return buffer.charAt(0) == buffer.charAt(4);
    }
}
/home/max/Documents/JMLGPT/tmp/StringBuilderChars03.java:6: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/StringBuilderChars03.java:3:) in method f
        return buffer.charAt(0) == buffer.charAt(4);
        ^
/home/max/Documents/JMLGPT/tmp/StringBuilderChars03.java:3: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/StringBuilderChars03.java:6:
    //@ ensures \result == (arg.charAt(0) == arg.charAt(4));
        ^
2 verification failures

